ecmascript/parser/tests/test262-error-references/fail/ae0a7ac275bc9f5c.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/ae0a7ac275bc9f5c.js:1:5
  |
1 | [...a, ] = b
  |     ^

